--- a/www/css/topcoat-mobile-light.css
+++ b/www/css/topcoat-mobile-light.css
@@ -1325,7 +1325,7 @@ float:right;
   user-select: none;
 }
 
-.anonymousarea{
+.anonymousareabg{
 
 width:318px;
 height:100px;
@@ -1339,6 +1339,11 @@ padding-bottom:5px;
 overflow:hidden;
 display:block;
 
+
+
+}
+
+.anonymousarea{
 
 
 }
@@ -1610,7 +1615,7 @@ Navigation Bar
   font-weight: 200;
   text-rendering: optimizeLegibility;
   width:320px;
-  height:660px;
+  height:640px;
   display: block;
   
   text-align: center;
@@ -1620,14 +1625,14 @@ Navigation Bar
  margin-top:0px; 
  margin-left:16px;
  text-align: center;
- width:309px;
- height:330px;
- overflow: auto;
+ width:290px;
+ height:auto;
  position:fixed;
  top:238px;
  left:0px;
+ 
 
-}
+ }
 
 .inggamearea{
 margin-top:0px;
