--- a/www/css/topcoat-mobile-light.css
+++ b/www/css/topcoat-mobile-light.css
@@ -1480,19 +1480,20 @@ Navigation Bar
 
 
 .setuppage{
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
+  overflow: auto;
+
   background: url("../img/setupbg.PNG") repeat-x;
   color: #FFF;
   font: 16px "Source Sans", helvetica, arial, sans-serif;
   font-weight: 200;
   text-rendering: optimizeLegibility;
   width:320px;
-  height:660px;
+  height:640px;
   display: block;
-  margin: 0 auto;
   text-align: center;
+  position:fixed;
+  left:0px;
+
 }
 /*
  Icon Button
@@ -1622,16 +1623,13 @@ Navigation Bar
 }
 
 .gameiconarea{
- margin-top:0px; 
+
+ margin-top:2px;
  margin-left:16px;
  text-align: center;
- width:290px;
- height:auto;
- position:fixed;
- top:238px;
- left:0px;
- 
-
+ width:300px;
+ height:240px;
+ overflow: auto;
  }
 
 .inggamearea{
@@ -2551,28 +2549,31 @@ left:86px;
 }
 
 .viewalluser{
+float:left;
+
 background-image:url("../img/dmenu.PNG");
 background-repeat: no-repeat;
-display:block;
 width:155px;
 height:35px;
 
-position:fixed;
-top:0px;
-left:80px;
+
+
+margin-left:10px;
+
 
 }
 .exithomebtn{
+
 background-image:url("../img/exitroom.PNG");
 background-repeat: no-repeat;
-display:block;
-width:47px;
 
-height:39px;
-position:fixed;
-left:0px;
-padding:0px;
-top:0px;
+width:47px;
+height:20px;
+margin-top:10px;
+margin-left:10px;
+
+float:left;
+
 }
 
 .backgamecenter{
@@ -2610,12 +2611,15 @@ top:92px;
 }
 
 .gameitemsinfo{
+
 margin-top:10px;
 width:280px;
 height:20px;
 padding:10px;
 position: relative;
 }
+
+
 .loginhead{
 
  -webkit-box-sizing: border-box;
