--- a/www/partials/killer/killstep3.html
+++ b/www/partials/killer/killstep3.html
@@ -1,5 +1,8 @@
 <script src="../jquery.js"></script>
 <script>
+    
+    localStorage.gotonextstep ="";
+
     $(document).ready(function(){
                       $("#FG").click(function(){
                                      $(".panel1").slideToggle("slow");
@@ -169,9 +172,15 @@ function reload(){
     
 }
 
-
+var k=0;
 function  kill(uid){
     
+    
+    localStorage.gotonextstep = "YES";
+    k=k+1;
+    //alert(k==1);
+    
+    if(k==1){
     var killuserurl = "http://203.100.80.135:8080/JujuDemo/servlet/Shashoukillperson?gamehomenum="+localStorage.g_gamenum +"&userid=" + uid ;
     //alert(killuserurl);
     
@@ -182,6 +191,18 @@ function  kill(uid){
            });
            
       $("#killicon"+ uid + "").remove();
+      
+      
+    
+    }else{
+    
+     $(".showmessage").fadeIn(1000);
+     $(".showmessage").fadeOut(3000);
+     
+ 
+    
+    }
+    
 }
 
 </script>
@@ -369,11 +390,25 @@ margin-top:-30px;
 
 }
 
+.showmessage{
+position:absolute;
+display:none;
+width:260px;
+margin-left:10px;
+padding:10px;
+background-color:black;
+color:white;
+font: 14px "Source Sans", helvetica, arial, sans-serif;
+z-index:200;
+border-radius: 3px;
+}
+
 </style>
+
 
 <div  class="main">
 <div onclick="reload()">&nbsp;&nbsp;</div>
-
+<div  class=showmessage>一轮只能杀一个参与者</div>
 
 <div id='JC' class=JC></div>
 <div id="jcuser" class='jclist'></div>
@@ -383,6 +418,7 @@ margin-top:-30px;
 
 <div id='PM' class=PM></div>
 <div id="pmuser" class='pmlist' ></div>
+
 
 </div>
 
