--- a/www/partials/killer/killstep4.html
+++ b/www/partials/killer/killstep4.html
@@ -1,5 +1,8 @@
 <script src="../jquery.js"></script>
 <script>
+    
+    
+    localStorage.gotonextstep ="";
     $(document).ready(function(){
                       $("#FG").click(function(){
                                      $(".panel1").slideToggle("slow");
@@ -152,9 +155,13 @@ function reload(){
     
 }
 
-
+var k=0;
 function  kill(uid){
     
+    localStorage.gotonextstep = "YES";
+    
+    k=k+1;
+    if(k==1){
     var killuserurl = "http://203.100.80.135:8080/JujuDemo/servlet/Jingcharenzheng?gamehomenum="+localStorage.g_gamenum +"&userid=" + uid ;
     //alert(killuserurl);
     
@@ -165,6 +172,19 @@ function  kill(uid){
            });
            
       $("#jcpoint"+ uid + "").remove();
+      
+      
+      
+    }else{
+        
+       
+        $(".showmessage").fadeIn(1000);
+        $(".showmessage").fadeOut(3000);
+        
+        
+    }
+    
+    
 }
 
 </script>
@@ -351,11 +371,24 @@ margin-top:-30px;
 
 }
 
+.showmessage{
+    position:absolute;
+    display:none;
+    width:260px;
+    margin-left:10px;
+    padding:10px;
+    background-color:black;
+    color:white;
+    font: 14px "Source Sans", helvetica, arial, sans-serif;
+    z-index:200;
+    border-radius: 3px;
+}
+
 </style>
 
 <div  class="main">
 <div onclick="reload()">&nbsp;&nbsp;</div>
-
+<div  class=showmessage>一轮只能指认一个参与者</div>
 
 <div id='JC' class=JC></div>
 <div id="jcuser" class='jclist'></div>
