--- a/www/partials/killer/s9mview.html
+++ b/www/partials/killer/s9mview.html
@@ -12,7 +12,12 @@
 
 
 <div class="kill-bottom">
-   <div  class="replaykillgame"  ng-click="replay()">
-   </div>
+    
+   <span  class="replaykillgame"  ng-click="replay()">
+   </span>
+   
+   <span  class="replaykillgame"  ng-click="exitgamehome()">
+   </span>
+
 </div>
 </div>
