--- a/www/partials/killer/s9mview.html
+++ b/www/partials/killer/s9mview.html
@@ -1,11 +1,12 @@
 <div class="killgamebg" ng-controller="killGamesetup2Ctrl">
-
+    <div class="exitgamehome"  ng-click="exitgamehome()">
+    </div>
 
 <iframe
     allowtransparency="true"
     style="background: transparent;"
     src="partials/killer/killstepr.html"
-    scrolling="yes" frameborder="0" height="568">
+    scrolling="yes" frameborder="0" height="568" width="320"  scrolling="auto">
 </iframe>
 
 
@@ -16,8 +17,6 @@
    <span  class="replaykillgame"  ng-click="replay()">
    </span>
    
-   <span  class="replaykillgame"  ng-click="exitgamehome()">
-   </span>
-
+  
 </div>
 </div>
