--- a/www/partials/killer/jkgameviewr.html
+++ b/www/partials/killer/jkgameviewr.html
@@ -1,11 +1,13 @@
 <div class="killgamebg" ng-controller="killGamesetup2Ctrl">
 
+<div class="exitgamehome"  ng-click="exitgamehome()">
+</div>
 
 <iframe
     allowtransparency="true"
     style="background: transparent;"
     src="partials/killer/killstepr.html"
-    scrolling="yes" frameborder="0" height="568">
+    scrolling="yes" frameborder="0" height="568" width="320"  scrolling="auto">
 </iframe>
 
 
