--- a/www/partials/dicegame/diceviewc1.html
+++ b/www/partials/dicegame/diceviewc1.html
@@ -18,8 +18,9 @@
 
 
 
-<div class="dice-menu-bar-btn">
-   <div class="dice-menu-bar-start"  ng-click="gogoplay()">
+<div class="dice-menu-bar-btn" ng-click="gogoplay()">
+    
+   <div class="dice-menu-bar-startn">
         &nbsp;&nbsp;
     </div>
     
@@ -27,4 +28,3 @@
 
 </div>
 
-<ng-include src="'partials/settingsOverlay.html'"></ng-include>
