--- a/www/partials/whoiswo/cchh.html
+++ b/www/partials/whoiswo/cchh.html
@@ -16,7 +16,7 @@
 
 
     <div style="padding:10px;">
-        <span style="margin-top:18px;">卧底词儿:</span>
+        <span style="margin-top:18px;color:white;">卧底词儿:</span>
         <input
             name= "title1"
             type= "text"
@@ -31,7 +31,7 @@
     
     <div style="padding:10px;">
         
-        <span>平民词儿:</span>
+        <span style="margin-top:18px;color:white;">平民词儿:</span>
         <input
         name="t2"
         type="text"
