--- a/www/partials/know/knowjstep1.html
+++ b/www/partials/know/knowjstep1.html
@@ -10,7 +10,7 @@
                                             $(".userlist").fadeOut(1000);
                                             $(".userlist").empty();
                                             getuserlist();
-                                            
+                                            getknowflag();
                                             
                                             },2000);
                       
