--- a/www/partials/jgch/jgchview.html
+++ b/www/partials/jgch/jgchview.html
@@ -7,10 +7,11 @@
         </div>
 
 <iframe
+    style="display:block;"
     allowtransparency="true"
     style="background: transparent;"
     src="partials/jgch/step1.html"
-    scrolling="yes" frameborder="0" height="568" width="320" scrolling="auto">
+    scrolling="yes" frameborder="0" height="338" width="320" scrolling="auto">
 </iframe>
 
 
