--- a/www/partials/step3.html
+++ b/www/partials/step3.html
@@ -76,7 +76,7 @@
         <span style="width:90px;display:block;margin-top:90px;">击鼓传花</span>
     </div>
     
-    <div class="topcoat-button-dmx" ng-click="slidePage('/dmxview')">
+    <div class="topcoat-button-dmx" ng-click="slidePage('/dmxview2')">
         <span style="width:90px;display:block;margin-top:90px;">大冒险</span>
     </div>
     
