--- a/www/partials/whoiswo/index1.html
+++ b/www/partials/whoiswo/index1.html
@@ -14,7 +14,7 @@
     allowtransparency="true"
     style="background: transparent;"
     src="partials/whoiswo/waiting.html"
-    scrolling="yes" frameborder="0" height="568" scrolling="auto">
+    scrolling="yes" frameborder="0" height="568" width="320" scrolling="auto">
 </iframe>
 
 <div  class="whoiswobg">
