--- a/www/partials/dmx/dmxcontent.html
+++ b/www/partials/dmx/dmxcontent.html
@@ -58,7 +58,7 @@ function reload(){
     
     //getdmxcontent();
     
-     playAudio('./open.mp3');
+  
     
     }
     
@@ -169,10 +169,10 @@ function reload(){
     width:72px;
     height:43px;
     display: block;
-    bottom:90px;
+    top:436px;
     left:120px;
     background-repeat:no-repeat;
-    position:fixed;
+    position:absolute;
     z-index:300;
 }
 
